refactor: 유저 역할 모델 정립 + 전 도메인 DTO/Enum 리팩토링 (교수님 최종 피드백 반영)
- 역할 4단계(ADMIN/BRANCH_MANAGER/STAFF/USER) Enum + User↔Employee/Branch 연결
- JWT에 branchId 포함 + SecurityUtil 데이터 스코핑(일반 USER 본인/지점관리자 본인 지점, IDOR 방어, OWASP A01)
- 전 9개 도메인 Map → Request/Response DTO 전환 (JSON 계약 보존) [피드백 #4]
- status/role Enum화: Role, DeviceStatus, RentalStatus (@Enumerated STRING) [피드백 #5]
- 페이징→필터 순서 교정 + 청크 전체스캔 제거 → @Query 쿼리 필터/페이징 [피드백 #1]
- findAll().stream() 제거 → exists/count/group-by 쿼리 (디바이스 삭제체크, 지점/모델 집계 등) [피드백 #2·#3]
- @EntityGraph / JOIN FETCH로 N+1 방어 (다른 조 우수사례 차용)
- 설계이력 라운드11 추가, 팀원 잔여 과제(AsStatus/Employee enum, Dept exists) TODO-TEAM.md로 분배
- DB: User에 nullable employee_id/branch_id 컬럼 추가(ddl-auto, 추가형이라 기존 데이터 안전)
- 테스트: contextLoads 시 MQTT 자동구동 비활성(@TestPropertySource)

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>