@@ -3,10 +3,25 @@ package hanyang.RentalManagementSystem.minseok.service;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
-import hanyang.RentalManagementSystem.common.dto.*;
-import hanyang.RentalManagementSystem.common.entity.*;
+import hanyang.RentalManagementSystem.common.dto.CommonResponse;
+import hanyang.RentalManagementSystem.common.dto.CommonSearchRequest;
+import hanyang.RentalManagementSystem.common.dto.Pagination;
+import hanyang.RentalManagementSystem.common.entity.Department;
+import hanyang.RentalManagementSystem.common.entity.DeptHistory;
+import hanyang.RentalManagementSystem.common.entity.Team;
+import hanyang.RentalManagementSystem.common.entity.TeamHistory;
 import hanyang.RentalManagementSystem.common.exception.CustomException;
-import hanyang.RentalManagementSystem.common.repository.*;
+import hanyang.RentalManagementSystem.common.repository.DepartmentRepository;
+import hanyang.RentalManagementSystem.common.repository.DeptHistoryRepository;
+import hanyang.RentalManagementSystem.common.repository.EmployeeRepository;
+import hanyang.RentalManagementSystem.common.repository.TeamHistoryRepository;
+import hanyang.RentalManagementSystem.common.repository.TeamRepository;
+import hanyang.RentalManagementSystem.minseok.dto.DepartmentResponse;
+import hanyang.RentalManagementSystem.minseok.dto.DepartmentUpsertRequest;
+import hanyang.RentalManagementSystem.minseok.dto.DeptHistoryResponse;
+import hanyang.RentalManagementSystem.minseok.dto.TeamHistoryResponse;
+import hanyang.RentalManagementSystem.minseok.dto.TeamResponse;
+import hanyang.RentalManagementSystem.minseok.dto.TeamUpsertRequest;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
@@ -15,8 +30,9 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
 
 @Slf4j
 @Service
@@ -32,45 +48,45 @@ public class DepartmentService {
 
     private static final ObjectMapper MAPPER = new ObjectMapper().registerModule(new JavaTimeModule());
 
-    // === 7-1 ~ 7-6 부서 ===
-    public CommonResponse<List<Map<String, Object>>> findAllDepartments(CommonSearchRequest request) {
+    // === 부서 ===
+    public CommonResponse<List<DepartmentResponse>> findAllDepartments(CommonSearchRequest request) {
         Page<Department> page = departmentRepository.findAllByIsDeletedFalse(request.toPageable());
-        List<Map<String, Object>> data = page.getContent().stream().map(this::deptToMap).collect(Collectors.toList());
-        return CommonResponse.success(data, Pagination.of(page));
+        return CommonResponse.success(page.getContent().stream().map(DepartmentResponse::from).toList(), Pagination.of(page));
     }
 
     @Transactional
-    public CommonResponse<Map<String, Object>> createDepartment(Map<String, Object> body) {
+    public CommonResponse<DepartmentResponse> createDepartment(DepartmentUpsertRequest req) {
         Department d = Department.builder()
-                .deptName((String) body.get("deptName"))
+                .deptName(req.getDeptName())
                 .createdDate(LocalDate.now())
-                .appliedDate(body.get("appliedDate") != null ? LocalDate.parse((String) body.get("appliedDate")) : LocalDate.now())
+                .appliedDate(req.getAppliedDate() != null ? LocalDate.parse(req.getAppliedDate()) : LocalDate.now())
                 .useYn(true)
                 .isDeleted(false)
-                .sortOrder(body.get("sortOrder") != null ? ((Number) body.get("sortOrder")).intValue() : null)
+                .sortOrder(req.getSortOrder())
                 .build();
         departmentRepository.save(d);
-        saveDeptHistory(d, "CREATE", null, toJson(d), (String) body.get("changedBy"));
-        return CommonResponse.created(deptToMap(d));
+        saveDeptHistory(d, "CREATE", null, toJson(d), req.getChangedBy());
+        return CommonResponse.created(DepartmentResponse.from(d));
     }
 
     @Transactional
-    public CommonResponse<Map<String, Object>> updateDepartment(Long id, Map<String, Object> body) {
+    public CommonResponse<DepartmentResponse> updateDepartment(Long id, DepartmentUpsertRequest req) {
         Department d = getDepartment(id);
         String before = toJson(d);
-        if (body.containsKey("deptName")) d.setDeptName((String) body.get("deptName"));
-        if (body.containsKey("useYn")) d.setUseYn((Boolean) body.get("useYn"));
-        if (body.containsKey("appliedDate") && body.get("appliedDate") != null)
-            d.setAppliedDate(LocalDate.parse((String) body.get("appliedDate")));
-        if (body.containsKey("sortOrder")) d.setSortOrder(((Number) body.get("sortOrder")).intValue());
-        saveDeptHistory(d, "UPDATE", before, toJson(d), (String) body.get("changedBy"));
-        return CommonResponse.success(deptToMap(d));
+        if (req.getDeptName() != null) d.setDeptName(req.getDeptName());
+        if (req.getUseYn() != null) d.setUseYn(req.getUseYn());
+        if (req.getAppliedDate() != null) d.setAppliedDate(LocalDate.parse(req.getAppliedDate()));
+        if (req.getSortOrder() != null) d.setSortOrder(req.getSortOrder());
+        saveDeptHistory(d, "UPDATE", before, toJson(d), req.getChangedBy());
+        return CommonResponse.success(DepartmentResponse.from(d));
     }
 
     @Transactional
     public void deleteDepartment(Long id) {
         Department d = getDepartment(id);
-        // [MEDIUM] existsBy 대신 findAll().isEmpty() 사용 (TeamRepository는 common/ 수정 불가)
+        // TODO(minseok): 교수님 피드백 #3 — findAll().isEmpty() 대신 count/exists 쿼리로 교체할 것.
+        //   TeamRepository에 existsByDepartmentIdAndIsDeletedFalse(Long) 추가 후 아래 한 줄을 교체.
+        //   (이전엔 common/ 수정 금지라 못 했지만, 이번에 PM이 공통 구조를 정리하며 열어둠)
         if (!teamRepository.findAllByDepartmentIdAndIsDeletedFalse(id).isEmpty()) {
             throw new CustomException("DEPARTMENT_HAS_TEAMS", "하위 팀이 있어 삭제할 수 없습니다.");
         }
@@ -78,53 +94,48 @@ public class DepartmentService {
         d.setIsDeleted(true);
     }
 
-    public CommonResponse<List<Map<String, Object>>> findTeamsByDepartment(Long deptId, CommonSearchRequest request) {
+    public CommonResponse<List<TeamResponse>> findTeamsByDepartment(Long deptId, CommonSearchRequest request) {
         getDepartment(deptId);
         Page<Team> page = teamRepository.findAllByDepartmentIdAndIsDeletedFalse(deptId, request.toPageable());
-        List<Map<String, Object>> data = page.getContent().stream().map(this::teamToMap).collect(Collectors.toList());
-        return CommonResponse.success(data, Pagination.of(page));
+        return CommonResponse.success(page.getContent().stream().map(TeamResponse::from).toList(), Pagination.of(page));
     }
 
-    public CommonResponse<List<Map<String, Object>>> findDepartmentHistory(Long deptId, CommonSearchRequest request) {
+    public CommonResponse<List<DeptHistoryResponse>> findDepartmentHistory(Long deptId, CommonSearchRequest request) {
         Page<DeptHistory> page = deptHistoryRepository.findAllByDepartmentId(deptId, request.toPageable());
-        List<Map<String, Object>> data = page.getContent().stream().map(this::deptHistoryToMap).collect(Collectors.toList());
-        return CommonResponse.success(data, Pagination.of(page));
+        return CommonResponse.success(page.getContent().stream().map(DeptHistoryResponse::from).toList(), Pagination.of(page));
     }
 
-    // === 7-7 ~ 7-10 팀 ===
+    // === 팀 ===
     @Transactional
-    public CommonResponse<Map<String, Object>> createTeam(Map<String, Object> body) {
-        // [HIGH] departmentId null 체크
-        Object deptIdRaw = body.get("departmentId");
-        if (deptIdRaw == null)
+    public CommonResponse<TeamResponse> createTeam(TeamUpsertRequest req) {
+        if (req.getDepartmentId() == null) {
             throw new CustomException("DEPT_ID_REQUIRED", "departmentId는 필수입니다.");
-        Long deptId = ((Number) deptIdRaw).longValue();
-        Department dept = getDepartment(deptId);
+        }
+        Department dept = getDepartment(req.getDepartmentId());
         Team t = Team.builder()
                 .department(dept)
-                .teamName((String) body.get("teamName"))
+                .teamName(req.getTeamName())
                 .createdDate(LocalDate.now())
-                .appliedDate(body.get("appliedDate") != null ? LocalDate.parse((String) body.get("appliedDate")) : LocalDate.now())
+                .appliedDate(req.getAppliedDate() != null ? LocalDate.parse(req.getAppliedDate()) : LocalDate.now())
                 .useYn(true)
                 .isDeleted(false)
-                .sortOrder(body.get("sortOrder") != null ? ((Number) body.get("sortOrder")).intValue() : null)
+                .sortOrder(req.getSortOrder())
                 .build();
         teamRepository.save(t);
-        saveTeamHistory(t, "CREATE", null, toJson(t), (String) body.get("changedBy"));
-        return CommonResponse.created(teamToMap(t));
+        saveTeamHistory(t, "CREATE", null, toJson(t), req.getChangedBy());
+        return CommonResponse.created(TeamResponse.from(t));
     }
 
     @Transactional
-    public CommonResponse<Map<String, Object>> updateTeam(Long id, Map<String, Object> body) {
+    public CommonResponse<TeamResponse> updateTeam(Long id, TeamUpsertRequest req) {
         Team t = getTeam(id);
         String before = toJson(t);
-        if (body.containsKey("teamName")) t.setTeamName((String) body.get("teamName"));
-        if (body.containsKey("useYn")) t.setUseYn((Boolean) body.get("useYn"));
-        if (body.containsKey("appliedDate") && body.get("appliedDate") != null)
-            t.setAppliedDate(LocalDate.parse((String) body.get("appliedDate")));
-        if (body.containsKey("sortOrder")) t.setSortOrder(((Number) body.get("sortOrder")).intValue());
-        saveTeamHistory(t, "UPDATE", before, toJson(t), (String) body.get("changedBy"));
-        return CommonResponse.success(teamToMap(t));
+        if (req.getTeamName() != null) t.setTeamName(req.getTeamName());
+        if (req.getUseYn() != null) t.setUseYn(req.getUseYn());
+        if (req.getAppliedDate() != null) t.setAppliedDate(LocalDate.parse(req.getAppliedDate()));
+        if (req.getSortOrder() != null) t.setSortOrder(req.getSortOrder());
+        saveTeamHistory(t, "UPDATE", before, toJson(t), req.getChangedBy());
+        return CommonResponse.success(TeamResponse.from(t));
     }
 
     @Transactional
@@ -137,10 +148,9 @@ public class DepartmentService {
         t.setIsDeleted(true);
     }
 
-    public CommonResponse<List<Map<String, Object>>> findTeamHistory(Long teamId, CommonSearchRequest request) {
+    public CommonResponse<List<TeamHistoryResponse>> findTeamHistory(Long teamId, CommonSearchRequest request) {
         Page<TeamHistory> page = teamHistoryRepository.findAllByTeamId(teamId, request.toPageable());
-        List<Map<String, Object>> data = page.getContent().stream().map(this::teamHistoryToMap).collect(Collectors.toList());
-        return CommonResponse.success(data, Pagination.of(page));
+        return CommonResponse.success(page.getContent().stream().map(TeamHistoryResponse::from).toList(), Pagination.of(page));
     }
 
     // === 헬퍼 ===
@@ -155,30 +165,17 @@ public class DepartmentService {
     }
 
     private void saveDeptHistory(Department d, String changeType, String before, String after, String changedBy) {
-        DeptHistory h = DeptHistory.builder()
-                .department(d)
-                .changeType(changeType)
-                .beforeValue(before)
-                .afterValue(after)
-                .changedDate(LocalDate.now())
-                .changedBy(changedBy)
-                .build();
-        deptHistoryRepository.save(h);
+        deptHistoryRepository.save(DeptHistory.builder()
+                .department(d).changeType(changeType).beforeValue(before).afterValue(after)
+                .changedDate(LocalDate.now()).changedBy(changedBy).build());
     }
 
     private void saveTeamHistory(Team t, String changeType, String before, String after, String changedBy) {
-        TeamHistory h = TeamHistory.builder()
-                .team(t)
-                .changeType(changeType)
-                .beforeValue(before)
-                .afterValue(after)
-                .changedDate(LocalDate.now())
-                .changedBy(changedBy)
-                .build();
-        teamHistoryRepository.save(h);
+        teamHistoryRepository.save(TeamHistory.builder()
+                .team(t).changeType(changeType).beforeValue(before).afterValue(after)
+                .changedDate(LocalDate.now()).changedBy(changedBy).build());
     }
 
-    /** [LOW] toJson 실패 시 로그 추가 */
     private String toJson(Object o) {
         try {
             Map<String, Object> m = new LinkedHashMap<>();
@@ -191,7 +188,6 @@ public class DepartmentService {
             } else if (o instanceof Team t) {
                 m.put("id", t.getId());
                 m.put("teamName", t.getTeamName());
-                // [HIGH] getDepartment() null 안전 처리
                 m.put("departmentId", t.getDepartment() != null ? t.getDepartment().getId() : null);
                 m.put("useYn", t.getUseYn());
                 m.put("appliedDate", String.valueOf(t.getAppliedDate()));
@@ -202,59 +198,5 @@ public class DepartmentService {
             log.warn("[DepartmentService] toJson 직렬화 실패: {}", e.getMessage());
             return "{}";
         }
-    }
-
-    private Map<String, Object> deptToMap(Department d) {
-        Map<String, Object> m = new LinkedHashMap<>();
-        m.put("id", d.getId());
-        m.put("deptName", d.getDeptName());
-        m.put("createdDate", d.getCreatedDate());
-        m.put("appliedDate", d.getAppliedDate());
-        m.put("useYn", d.getUseYn());
-        m.put("sortOrder", d.getSortOrder());
-        m.put("createdAt", d.getCreatedAt());
-        m.put("updatedAt", d.getUpdatedAt());
-        return m;
-    }
-
-    /** [HIGH] getDepartment() null 안전 처리 */
-    private Map<String, Object> teamToMap(Team t) {
-        Map<String, Object> m = new LinkedHashMap<>();
-        m.put("id", t.getId());
-        m.put("teamName", t.getTeamName());
-        Department dept = t.getDepartment();
-        m.put("departmentId", dept != null ? dept.getId() : null);
-        m.put("departmentName", dept != null ? dept.getDeptName() : null);
-        m.put("createdDate", t.getCreatedDate());
-        m.put("appliedDate", t.getAppliedDate());
-        m.put("useYn", t.getUseYn());
-        m.put("sortOrder", t.getSortOrder());
-        return m;
-    }
-
-    private Map<String, Object> deptHistoryToMap(DeptHistory h) {
-        Map<String, Object> m = new LinkedHashMap<>();
-        m.put("id", h.getId());
-        m.put("departmentId", h.getDepartment() != null ? h.getDepartment().getId() : null);
-        m.put("changeType", h.getChangeType());
-        m.put("beforeValue", h.getBeforeValue());
-        m.put("afterValue", h.getAfterValue());
-        m.put("changedDate", h.getChangedDate());
-        m.put("changedBy", h.getChangedBy());
-        m.put("createdAt", h.getCreatedAt());
-        return m;
-    }
-
-    private Map<String, Object> teamHistoryToMap(TeamHistory h) {
-        Map<String, Object> m = new LinkedHashMap<>();
-        m.put("id", h.getId());
-        m.put("teamId", h.getTeam() != null ? h.getTeam().getId() : null);
-        m.put("changeType", h.getChangeType());
-        m.put("beforeValue", h.getBeforeValue());
-        m.put("afterValue", h.getAfterValue());
-        m.put("changedDate", h.getChangedDate());
-        m.put("changedBy", h.getChangedBy());
-        m.put("createdAt", h.getCreatedAt());
-        return m;
     }
 }
